// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/OpenClose Compact smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5 _openClose_compact_kflqv_18 "
              aria-expanded="false"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 _icon_compact_kflqv_53"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57 _title_compact_kflqv_66 _title_underline_kflqv_61">
          Er jeg pendler?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/OpenClose CompactAndIsExpanded smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5 _openClose_compact_kflqv_18 "
              aria-expanded="true"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_kflqv_37 _icon_active_kflqv_37 _icon_open_kflqv_47 _icon_compact_kflqv_53"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57 _title_compact_kflqv_66 _title_underline_kflqv_61">
          Er jeg pendler?
        </span>
      </button>
    </div>
    <div class="_content_kflqv_70 _content_compact_kflqv_75 ">
      En pendler er en lønnstaker som overnatter borte på grunn av jobb. Hvis du er pendler kan du ha krav på fradrag for dine merkostnader til kost, losji og reiser til og fra pendlerboligen.
    </div>
  </div>
</div>
`;

exports[`Tester/OpenClose CompactWithIconRight smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5 _openClose_compact_kflqv_18 _openClose_hasIconRight_kflqv_21"
              aria-expanded="false"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 _icon_compact_kflqv_53"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57 _title_compact_kflqv_66 _title_underline_kflqv_61">
          Er jeg pendler?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/OpenClose CompactWithIconRightAndUnderline smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5 _openClose_compact_kflqv_18 _openClose_hasIconRight_kflqv_21"
              aria-expanded="false"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 _icon_compact_kflqv_53"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57 _title_compact_kflqv_66 _title_underline_kflqv_61">
          Er jeg pendler?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/OpenClose CompactWithUnderline smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5 _openClose_compact_kflqv_18 "
              aria-expanded="false"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 _icon_compact_kflqv_53"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57 _title_compact_kflqv_66 _title_underline_kflqv_61">
          Er jeg pendler?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/OpenClose Defaults play-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5  "
              aria-expanded="false"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57  _title_underline_kflqv_61">
          Er jeg pendler?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/OpenClose IconRightContent smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5  _openClose_hasIconRight_kflqv_21"
              aria-expanded="true"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_kflqv_37 _icon_active_kflqv_37 _icon_open_kflqv_47 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57  _title_underline_kflqv_61">
          Er jeg pendler?
        </span>
      </button>
    </div>
    <div class="_content_kflqv_70  _content_hasIconRight_kflqv_80">
      En pendler er en lønnstaker som overnatter borte på grunn av jobb. Hvis du er pendler kan du ha krav på fradrag for dine merkostnader til kost, losji og reiser til og fra pendlerboligen.
    </div>
  </div>
</div>
`;

exports[`Tester/OpenClose InContext smoke-test 1`] = `
<div data-test-block="true">
  <div>
    I Skatteetaten definerer vi om du er pendler ut fra at en rekke vilkår må være oppfylt. For å få fradragene må du blant annet være lønnstaker og overnatte borte på grunn av jobb. Pendlerfradrag gis kun for reiseutgifter som du selv (pendleren) har for å besøke hjemmet ditt, ikke for familie som kommer på besøk til din pendlerbolig.
  </div>
  <div class>
    <div class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5  "
              aria-expanded="false"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57  _title_underline_kflqv_61">
          Er jeg pendler?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/OpenClose IsExpanded play-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5  "
              aria-expanded="true"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_kflqv_37 _icon_active_kflqv_37 _icon_open_kflqv_47 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57  _title_underline_kflqv_61">
          Er jeg pendler?
        </span>
      </button>
    </div>
    <div class="_content_kflqv_70  ">
      En pendler er en lønnstaker som overnatter borte på grunn av jobb. Hvis du er pendler kan du ha krav på fradrag for dine merkostnader til kost, losji og reiser til og fra pendlerboligen.
    </div>
  </div>
</div>
`;

exports[`Tester/OpenClose WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname">
    <div class="_tag_kflqv_1">
      <button id="htmlId"
              class="_openClose_kflqv_5  "
              lang="nb"
              data-testid="123ID"
              aria-expanded="false"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57  _title_underline_kflqv_61">
          Er jeg pendler?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/OpenClose WithChangingTitle play-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5  "
              aria-expanded="true"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_kflqv_37 _icon_active_kflqv_37 _icon_open_kflqv_47 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57  _title_underline_kflqv_61">
          OpenClose har blitt åpnet
        </span>
      </button>
    </div>
    <div class="_content_kflqv_70  ">
      En pendler er en lønnstaker som overnatter borte på grunn av jobb. Hvis du er pendler kan du ha krav på fradrag for dine merkostnader til kost, losji og reiser til og fra pendlerboligen.
    </div>
  </div>
</div>
`;

exports[`Tester/OpenClose WithIconRight smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5  _openClose_hasIconRight_kflqv_21"
              aria-expanded="false"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57  _title_underline_kflqv_61">
          Er jeg pendler?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/OpenClose WithIconRightAndNoUnderline smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5  _openClose_hasIconRight_kflqv_21"
              aria-expanded="false"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57  ">
          Er jeg pendler?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/OpenClose WithIsOnClickOnlyFiredOnOpen play-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5  "
              aria-expanded="false"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57  _title_underline_kflqv_61">
          Er jeg pendler?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/OpenClose WithLongTitle smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5  "
              aria-expanded="false"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57  _title_underline_kflqv_61">
          Denneknappenharenveldiglangtekst.Dentekstengåroverflerelinjerfordidenersålangogdablirikonetriktigplassert.Fordetkanjoskjeattittelengåroverflerelinjerhvisdeterenveldiglitenskjerm.Sådamåvisjekkeatdetikkeserrartut.
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/OpenClose WithOnClick play-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5  "
              aria-expanded="false"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57  _title_underline_kflqv_61">
          Er jeg pendler?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/OpenClose WithRef play-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5  "
              aria-expanded="false"
              type="button"
              id="dummyIdForwardedFromRef"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57  _title_underline_kflqv_61">
          Er jeg pendler?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/OpenClose WithTitleAs play-test 1`] = `
<div data-test-block="true">
  <div class>
    <h1 class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5  "
              aria-expanded="false"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57  _title_underline_kflqv_61">
          Heading h1
        </span>
      </button>
    </h1>
  </div>
  <div class>
    <h2 class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5  "
              aria-expanded="false"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57  _title_underline_kflqv_61">
          Heading h2
        </span>
      </button>
    </h2>
  </div>
  <div class>
    <h3 class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5  "
              aria-expanded="false"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57  _title_underline_kflqv_61">
          Heading h3
        </span>
      </button>
    </h3>
  </div>
  <div class>
    <h4 class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5  "
              aria-expanded="false"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57  _title_underline_kflqv_61">
          Heading h4
        </span>
      </button>
    </h4>
  </div>
  <div class>
    <h5 class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5  "
              aria-expanded="false"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57  _title_underline_kflqv_61">
          Heading h5
        </span>
      </button>
    </h5>
  </div>
  <div class>
    <h6 class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5  "
              aria-expanded="false"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57  _title_underline_kflqv_61">
          Heading h6
        </span>
      </button>
    </h6>
  </div>
</div>
`;

exports[`Tester/OpenClose WithoutUnderline smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_tag_kflqv_1">
      <button class="_openClose_kflqv_5  "
              aria-expanded="false"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_kflqv_37 _icon_active_kflqv_37 _icon_closed_kflqv_50 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
          </path>
        </svg>
        <span class="_title_kflqv_57  ">
          Er jeg pendler?
        </span>
      </button>
    </div>
  </div>
</div>
`;
